examples/semantics/errors/error16.grace
fun error16 () : nothing
	fun foo(c:char) :int;
	fun foo(c:char): int;
	fun foo(c:char): int;
{
	puti(9);
}
